Update to fetch url

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </style>
 </head>
 <body>
-    <h1>Calorie Burning Calculator</h1>
+    <h1>Language Predictor</h1>
     <form id="predictor-form">
 
         <label for="lang">Input Language</label>
@@ -46,7 +46,7 @@
             // Make an HTTP POST request to a hypothetical server
             // fetch("https://language-prediction-service.onrender.com/predict", {
             
-            fetch("https://langauge-predicted.onrender.com/predict", {
+            fetch("https://language-predicted.onrender.com/predict", {
             method: "POST",
             headers: {
                 "Content-Type": "application/json"
