Fixed input box

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <form id="predictor-form">
 
         <label for="lang">Input Language</label>
-        <input type="number" id="lang" name="lang" required>
+        <input type="text" id="lang" name="lang" required>
 
         <button type="button" id="predict-lang-button">Predict Language</button>
     </form>
